tests/rosetta/out/Haskell/abbreviations-automatic.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/abbreviations-automatic.hs:164:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/abbreviations-automatic.hs:157:1
                 /workspace/mochi/tests/rosetta/out/Haskell/abbreviations-automatic.hs:164:1
    |
164 | main = do
    | ^^^^
